[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/textures/vehicles/hummer/wheel.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/vehicles/hummer/body.png" type="Texture" id=2]
[ext_resource path="res://scripts/game/VehicleController.gd" type="Script" id=3]
[ext_resource path="res://entities/vehicle_guns/MiniGun.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/hummer_engine/working_engine_2.mp3" type="AudioStream" id=5]

[sub_resource type="PhysicsMaterial" id=1]
friction = 4.0
rough = true
absorbent = true

[sub_resource type="PhysicsMaterial" id=2]
rough = true

[sub_resource type="CircleShape2D" id=3]
radius = 24.0248

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 62.5348, 5.27808 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 164.541, 69.4707 )

[node name="car" type="RigidBody2D"]
position = Vector2( 202, -90 )
mass = 300.0
physics_material_override = SubResource( 1 )
gravity_scale = 4.0
can_sleep = false
script = ExtResource( 3 )
max_speed = 360
acceleration = 2200.0

[node name="body" type="Sprite" parent="."]
position = Vector2( -36.4817, -11.1967 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="r_wheel" type="RigidBody2D" parent="."]
position = Vector2( 88, 47 )
mass = 5.10204
physics_material_override = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="r_wheel"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="r_wheel"]
shape = SubResource( 3 )

[node name="PinJoint2D" type="PinJoint2D" parent="r_wheel"]
node_a = NodePath("../..")
node_b = NodePath("..")
bias = 0.5
softness = 0.03

[node name="l_wheel" type="RigidBody2D" parent="."]
position = Vector2( -137, 47 )
mass = 5.10204
physics_material_override = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="l_wheel"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="l_wheel"]
shape = SubResource( 3 )

[node name="PinJoint2D" type="PinJoint2D" parent="l_wheel"]
node_a = NodePath("../..")
node_b = NodePath("..")
bias = 0.5
softness = 0.03

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 329.275, -182.948 )
current = true
zoom = Vector2( 1.25, 1.25 )

[node name="RolloverDetector" type="Area2D" parent="."]
visible = false
position = Vector2( -108, 71 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="RolloverDetector"]
modulate = Color( 0.156863, 1, 0.0117647, 1 )
position = Vector2( 18.2866, -128.961 )
shape = SubResource( 4 )

[node name="RolloverTimer" type="Timer" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -36.4817, -11.1967 )
polygon = PoolVector2Array( 41.9083, -56.5026, 47, -50.4, 60.5153, -33.0051, 63.9343, -24.8293, 71.6477, 4.51939, 89.7319, 3.63222, 132.729, 10.0378, 148.914, 11.7862, 165.841, 17.1316, 167.177, 43.4131, 159.794, 41.8865, 150.365, 29.6848, 127.89, 21.4441, 103.543, 25.9391, 87.0613, 52.534, -65.1079, 48.6977, -80.2612, 23.1616, -114.216, 20.9167, -133.059, 34.0014, -148.064, 31.3909, -146.941, 4.45186, -145.257, -3.68599, -136.558, -10.4208, -124.492, -14.0688, -55.1799, -30.9057, 15.2546, -31.7475, 31, -50.5, 35.4559, -56.2374 )

[node name="Weapon" parent="." instance=ExtResource( 4 )]
position = Vector2( 1.53465, -68.3159 )

[node name="EngineAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -2.0
autoplay = true

[node name="DronePosition2D" type="Position2D" parent="."]
position = Vector2( 508.341, -420.315 )

[node name="DroneAim" type="Position2D" parent="."]
position = Vector2( -42.9083, 2.64865 )

[node name="EnemyBulletDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBulletDetector"]
position = Vector2( -31.1132, 1.68179 )
shape = SubResource( 5 )

[connection signal="body_entered" from="RolloverDetector" to="." method="_on_RolloverDetector_body_entered"]
[connection signal="timeout" from="RolloverTimer" to="." method="_on_RolloverTimer_timeout"]
[connection signal="shoot" from="Weapon" to="." method="_on_Weapon_shoot"]
[connection signal="area_entered" from="EnemyBulletDetector" to="." method="_on_EnemyBulletDetector_area_entered"]
